Week-6/example-micrometer/micrometer-deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: micro-deployment 
  namespace: ben-space #if you don't specify it switches to default namespace 
  labels: 
    app: micrometer-demo 

spec: # Specifications for the Deployment!
  replicas: 3
  selector: 
    matchLabels: 
      app: micrometer-demo # has to match the template labels app. 
  template: 
    metadata: 
      labels: 
        app: micrometer-demo
    spec: # specification for the pod itself now!
      containers: 
        - name: micrometer-demo-deployment
          image: barayathel/micrometer-example
          ports:
            - containerPort: 7400
          imagePullPolicy: Always # This is an optional spec, whenever we redploy it will always pull image from the remote repo
