Week-6/example-micrometer/micrometer-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: micrometer-service
  namespace: ben-space
  labels: 
    app: micrometer-demo 
spec: 
  selector: 
    app: micrometer-demo 
  ports: 
    - port: 80 #IS meant for the service 
      targetPort: 7400 # this is for the container port 
      protocol: TCP
      name: http
      #nodePort: 31000 , port to access the node itself a port will be randomly generate if none is provided

      # from externally we go to port 31000 -> gets funneld to our service on port 80 (internal) -> funneled to port 7400 in the pod
      # communicating from internally, a service or pod will communicate to port 80 -> funneled to port 7400 in the pod.
