Week-6/example-micrometer/ingress-template.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: <name-of-ingress>
  namespace: <namespace>
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec: 
  rules: 
    - http:
        paths: 
        - pathType: Prefix
          path: "/<path>/(.*)"
          backend: 
            service: 
              name: <the service you want to expose, make sure it's in the same namespace>
              port: 
                number: <which port you want to expose>
